# package-lock-json-parser

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: lib.rs
tests/cool-project/: package-lock.json
tests/workspace/moon/: package-lock.json
tests/workspace/v2/: package-lock.json
tests/workspace/v3/: package-lock.json
